IMplement arg processing in iBeacon

--- a/src/ibeacon/CMakeLists.txt
+++ b/src/ibeacon/CMakeLists.txt
@@ -3,8 +3,26 @@
 # Define language
 ENABLE_LANGUAGE ( C )
 
-# Define build name
-SET ( BUILD_NAME	"ibeacon_${PROJECT_NAME}" )
+# Set up defaults
+SET ( BUILD_NAME	"ibeacon" )
+SET ( IBEACON_DEFAULT_ADVERTISE       1000 )
+SET ( IBEACON_DEFAULT_CONN_MODE       0 )
+SET ( IBEACON_DEFAULT_HCI_CTRL        0 )
+SET ( IBEACON_DEFAULT_MAJOR           0 )
+SET ( IBEACON_DEFAULT_MINOR           0 )
+SET ( IBEACON_DEFAULT_MEASURED_POWER  -80.0 )
+SET ( IBEACON_DEFAULT_NAME            "iBeacon" )
+SET ( IBEACON_DEFAULT_NAME_LENGTH     32 )
+SET ( IBEACON_DEFAULT_PASSWORD        "4321" )
+SET ( IBEACON_PASSWORD_LENGTH         4 )
+SET ( IBEACON_DEFAULT_SERIAL          34251 )
+SET ( IBEACON_SERIAL_LENGTH           5 )
+SET ( IBEACON_DEFAULT_TX_POWER        0.0 )
+
+CONFIGURE_FILE (
+  "${CMAKE_CURRENT_SOURCE_DIR}/ibeacon.h.in"
+  "${CMAKE_BINARY_DIR}/include/btest/ibeacon.h"
+  NEWLINE_STYLE UNIX )
 
 # Set includes path
 INCLUDE_DIRECTORIES (
@@ -12,10 +30,9 @@ INCLUDE_DIRECTORIES (
     )
 
 # Add sources
-SET ( Sources		"ibeacon.c" )
+LIST (APPEND SOURCES "ibeacon.c")
 
 # Set up build
-ADD_EXECUTABLE ( "${BUILD_NAME}"	${Sources} )
-TARGET_LINK_LIBRARIES ( "${BUILD_NAME}" ${BLUETOOTH_LIBRARY} )
+ADD_EXECUTABLE ( "${BUILD_NAME}"	${SOURCES} )
 
 # End of file
