--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ PROJECT(
 # Project version
 SET ( PROJECT_VERSION_MAJOR	0 )
 SET ( PROJECT_VERSION_MINOR	0 )
-SET ( PROJECT_VERSION_PATCH	1 )
+SET ( PROJECT_VERSION_PATCH	2 )
 SET ( PROJECT_VERSION		${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH} )
 
 # Project details
@@ -24,10 +24,32 @@ STRING ( TIMESTAMP TODAY "%d/%m/%Y" )
 STRING(COMPARE EQUAL "${CMAKE_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}" is_top_level)
 
 # Detect required functions and libraries
-INCLUDE ( ${CMAKE_SOURCE_DIR}/cmake/FindBlueZ.cmake )
-IF (NOT BLUETOOTH_FOUND)
-    MESSAGE ( ERROR "BlueZ library and headers not found!" )
+LIST (APPEND HEADER_FILES_TO_CHECK_LIST "stdio.h")
+LIST (APPEND HEADER_FILES_TO_CHECK_LIST "stdlib.h")
+LIST (APPEND HEADER_FILES_TO_CHECK_LIST "limits.h")
+LIST (APPEND HEADER_FILES_TO_CHECK_LIST "errno.h")
+LIST (APPEND HEADER_FILES_TO_CHECK_LIST "getopt.h")
+LIST (APPEND HEADER_FILES_TO_CHECK_LIST "sys/ioctl.h")
+LIST (APPEND HEADER_FILES_TO_CHECK_LIST "sys/socket.h")
+
+INCLUDE (CheckIncludeFiles)
+CHECK_INCLUDE_FILES (
+    "${HEADER_FILES_TO_CHECK_LIST}" REQUIRED_HEADERS_FOUND LANGUAGE C
+)
+
+IF (NOT REQUIRED_HEADERS_FOUND)
+    MESSAGE ( FATAL_ERROR "Required headers absent!" )
 ENDIF ()
+
+INCLUDE ( ${CMAKE_SOURCE_DIR}/cmake/FindBlueZ.cmake )
+IF (NOT BLUETOOTH_FOUND )
+    MESSAGE ( FATAL_ERROR "BlueZ library and headers not found!" )
+ELSE()
+    MESSAGE ( STATUS "BlueZ library found!" )
+ENDIF ()
+
+# Preset common libraries for the project
+LINK_LIBRARIES( ${BLUETOOTH_LIBRARY} )
 
 # Add GNU install dirs
 INCLUDE ( GNUInstallDirs )
