--- a/include/btest/btest.h.in
+++ b/include/btest/btest.h.in
@@ -15,6 +15,8 @@
 #define __BTEST_VERSION_MAJOR	@PROJECT_VERSION_MAJOR@
 #define __BTEST_VERSION_MINOR	@PROJECT_VERSION_MINOR@
 #define __BTEST_VERSION_PATCH	@PROJECT_VERSION_PATCH@
+#define __BTEST_VERSION_STRING  "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@"
+
 
 #endif /* __BEACON_TEST_H__ */
 
