--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,12 +24,14 @@ STRING ( TIMESTAMP TODAY "%d/%m/%Y" )
 STRING(COMPARE EQUAL "${CMAKE_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}" is_top_level)
 
 # Detect required functions and libraries
+LIST (APPEND HEADER_FILES_TO_CHECK_LIST "errno.h")
+LIST (APPEND HEADER_FILES_TO_CHECK_LIST "limits.h")
 LIST (APPEND HEADER_FILES_TO_CHECK_LIST "stdio.h")
 LIST (APPEND HEADER_FILES_TO_CHECK_LIST "stdlib.h")
-LIST (APPEND HEADER_FILES_TO_CHECK_LIST "limits.h")
-LIST (APPEND HEADER_FILES_TO_CHECK_LIST "errno.h")
+LIST (APPEND HEADER_FILES_TO_CHECK_LIST "string.h")
 LIST (APPEND HEADER_FILES_TO_CHECK_LIST "getopt.h")
 LIST (APPEND HEADER_FILES_TO_CHECK_LIST "sys/ioctl.h")
+LIST (APPEND HEADER_FILES_TO_CHECK_LIST "sys/random.h")
 LIST (APPEND HEADER_FILES_TO_CHECK_LIST "sys/socket.h")
 
 INCLUDE (CheckIncludeFiles)
