--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -5,4 +5,9 @@ CONFIGURE_FILE (
   "${CMAKE_CURRENT_BINARY_DIR}/btest/btest.h"
   NEWLINE_STYLE UNIX )
 
+CONFIGURE_FILE (
+  "${CMAKE_SOURCE_DIR}/include/btest/hci_config.h.in"
+  "${CMAKE_BINARY_DIR}/include/btest/hci_config.h"
+  NEWLINE_STYLE UNIX )
+
 # End of file
