Fix state as is.

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,8 +1,8 @@
 # Headers
 
 CONFIGURE_FILE (
-  "${CMAKE_CURRENT_SOURCE_DIR}/beaconizer/btest.h.in"
-  "${CMAKE_CURRENT_BINARY_DIR}/beaconizer/btest.h"
+  "${CMAKE_CURRENT_SOURCE_DIR}/beaconizer/config.h.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/beaconizer/config.h"
   NEWLINE_STYLE UNIX )
 
 CONFIGURE_FILE (
