--- a/src/ibeacon/CMakeLists.txt
+++ b/src/ibeacon/CMakeLists.txt
@@ -1,43 +1,44 @@
 # Build ibeacon proto based beacon
 
-# Define language
-ENABLE_LANGUAGE ( C )
+# Set language
+enable_language ( C )
 
 # Set up defaults
-SET ( IBEACON_NAME	                  "ibeacon" )
-SET ( IBEACON_DEFAULT_ADVERTISE       1000 )
-SET ( IBEACON_DEFAULT_CONN_MODE       0 )
-SET ( IBEACON_DEFAULT_HCI_CTRL        0 )
-SET ( IBEACON_DEFAULT_MAJOR           0 )
-SET ( IBEACON_DEFAULT_MINOR           0 )
-SET ( IBEACON_DEFAULT_MEASURED_POWER  -80.0 )
-SET ( IBEACON_DEFAULT_NAME            "iBeacon" )
-SET ( IBEACON_DEFAULT_NAME_LENGTH     32 )
-SET ( IBEACON_DEFAULT_PASSWORD        "4321" )
-SET ( IBEACON_PASSWORD_LENGTH         4 )
-SET ( IBEACON_DEFAULT_SERIAL          34251 )
-SET ( IBEACON_SERIAL_LENGTH           5 )
-SET ( IBEACON_DEFAULT_TX_POWER        0.0 )
+set ( IBEACON_NAME	                  "ibeacon" )
+set ( IBEACON_DEFAULT_ADVERTISE       1000 )
+set ( IBEACON_DEFAULT_CONN_MODE       0 )
+set ( IBEACON_DEFAULT_HCI_CTRL        0 )
+set ( IBEACON_DEFAULT_MAJOR           0 )
+set ( IBEACON_DEFAULT_MINOR           0 )
+set ( IBEACON_DEFAULT_MEASURED_POWER  -80.0 )
+set ( IBEACON_DEFAULT_NAME            "iBeacon" )
+set ( IBEACON_DEFAULT_NAME_LENGTH     32 )
+set ( IBEACON_DEFAULT_PASSWORD        "4321" )
+set ( IBEACON_PASSWORD_LENGTH         4 )
+set ( IBEACON_DEFAULT_SERIAL          34251 )
+set ( IBEACON_SERIAL_LENGTH           5 )
+set ( IBEACON_DEFAULT_TX_POWER        0.0 )
 
-CONFIGURE_FILE (
+configure_file (
   "${CMAKE_CURRENT_SOURCE_DIR}/ibeacon.h.in"
-  "${CMAKE_BINARY_DIR}/include/btest/ibeacon.h"
+  "${CMAKE_BINARY_DIR}/include/beaconizer/ibeacon.h"
   NEWLINE_STYLE UNIX )
 
 # Set includes path
-INCLUDE_DIRECTORIES (
+include_directories (
     ${CMAKE_BINARY_DIR}/include
     ${CMAKE_SOURCE_DIR}/include
     )
 
 # Add sources
-LIST (APPEND SOURCES "ibeacon.c")
+list (APPEND SOURCES "ibeacon.c")
 
 # Set up build
-ADD_EXECUTABLE ( "${IBEACON_NAME}"	${SOURCES} )
+add_executable ( "${IBEACON_NAME}"	${SOURCES} )
 
 # Add libraries to link with
-# TARGET_LINK_LIBRARIES("${IBEACON_NAME}" PRIVATE ${HCI_LIBRARY_NAME}::${HCI_LIBRARY_NAME})
+target_link_libraries( ${IBEACON_NAME} PRIVATE ${BLUETOOTH_LIBRARY} )
+# TARGET_LINK_LIBRARIES("${IBEACON_NAME}" PRIVATE ${LOOP_LIBRARY_NAME}::${LOOP_LIBRARY_NAME})
 
 
 # End of file
