Almost done! Next commit is working beacons!

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,6 +7,8 @@ list ( APPEND TEST   "db01" )
 list ( APPEND TEST   "db02" )
 list ( APPEND TEST   "db03" )
 list ( APPEND TEST   "io00" )
+list ( APPEND TEST   "io01" )
+list ( APPEND TEST   "loop00" )
 
 # Library test
 # -----------------------------------------------------------------
