--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,6 +10,7 @@ list ( APPEND TEST   "io00" )
 list ( APPEND TEST   "io01" )
 list ( APPEND TEST   "loop00" )
 list ( APPEND TEST   "loop01" )
+list ( APPEND TEST   "loop02" )
 
 # Library test
 # -----------------------------------------------------------------
