Rewrite loop test with sockets and fix memory leak.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,6 +11,7 @@ list ( APPEND TEST   "io01" )
 list ( APPEND TEST   "loop00" )
 list ( APPEND TEST   "loop01" )
 list ( APPEND TEST   "loop02" )
+list ( APPEND TEST   "loop03" )
 
 # Library test
 # -----------------------------------------------------------------
